# petit-prince

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  claude.md  compose.yml  config.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: tests.yml
data/: Le Petit Prince.txt
embeddings/: README.md  pyproject.toml
embeddings/src/embeddings/: __init__.pyi
embeddings/src/embeddings/sparse/: __init__.py  encoder.py  models.py
frontend/: Dockerfile  README.md  app.js  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/components/chat/: CitationBlock.tsx  CitationModal.tsx  InputBar.tsx  MessageBubble.tsx  MessageList.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/thinking/: ThinkingPanel.tsx  ToolCallBlock.tsx
frontend/components/ui/: Collapsible.tsx  ErrorBoundary.tsx
frontend/config/: nginx.conf
frontend/hooks/: useChat.ts  useConversations.ts
frontend/lib/: api.ts  citations.ts  db.ts  quotes.ts  streamParser.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/store/: uiStore.ts
frontend/types/: conversation.ts  message.ts  sse.ts
gateway/: README.md  pyproject.toml
gateway/src/gateway/: __init__.py  config.py  main.py
gateway/src/gateway/routers/: __init__ .pyi  chat.py  models.py  responses.py  titrate.py
gateway/src/gateway/schemas/: __init__.py  chat.py  models.py  titrate.py
gateway/src/gateway/services/: __init__.py  mcp_client.py  tool_loop.py
indexer/: README.md  pyproject.toml
indexer/src/indexer/: __init__.pyi  main.py  models.py
indexer/src/indexer/pipeline/: __init__.py  (+2 more)
mcp_server/: README.md  pyproject.toml
mcp_server/src/mcp_server/: __init__.pyi  config.py  main.py
mcp_server/src/mcp_server/schemas/: __init__.py  retriever.py  web_search.py
mcp_server/src/mcp_server/tools/: __init__.py  retriever.py  web_search.py
prompts/: README.md  prompts.yaml  pyproject.toml
prompts/src/prompts/: __init__.py  loader.py
qdrant_manager/: README.md  pyproject.toml
qdrant_manager/src/qdrant_manager/: __init__.py  client.py  index.py  retrieve.py
scripts/: quality_wall.sh  run_test.sh  serve_frontend.sh  start.sh  test_api.sh
searxng/: settings.yml
src/: main.py
src/api/: router.py
src/api/routes/: chat.py  init.py
src/api/schemas/: chat.py  init.py
src/config/: logging.py  settings.py
src/core/: exceptions.py
src/core/interfaces/: chunker.py  embedder.py  generator.py  reranker.py  vectorstore.py
src/generation/: prompt_builder.py  response_handler.py  service.py
src/infrastructure/: llama_client.py  qdrant_client.py
src/ingestion/: chunker.py  paragraph_builder.py  reader.py  service.py
src/utils/: batch.py
tests/: QUICKSTART.md  README.md  STRUCTURE.txt  TESTING_SUMMARY.md  TESTS_SETUP.md  conftest.py
tests/fixtures/: noise_only.txt  sample_book.txt
tests/fixtures/config_samples/: missing_fields.yml  valid_config.yml
tests/integration/: __init__.py  test_api.py  test_api_endpoints.py  test_pipeline.py
tests/unit/: __init__.py
tests/unit/test_api/: __init__.py  test_chat_route.py  test_init_route.py
tests/unit/test_config/: __init__.py  test_settings_invalid.py  test_settings_valid.py
tests/unit/test_generation/: test_prompt_builder.py  test_response_handler.py  test_service.py
tests/unit/test_infrastructrure/: test_llama_client.py  test_qdrant_client.py
tests/unit/test_ingestion/: __init__.py  test_chunker.py  test_paragraph_builder.py  test_reader.py  test_service.py
tests/unit/test_main/: test_main_app.py
tests/unit/test_utils/: __init__.py  test_batch.py
(+1 files in other folders)
