[project]
name = "petit-prince"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "embeddings",
    "gateway",
    "indexer",
    "mcp-server",
    "prompts",
    "pyaml>=26.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-manager",
]

[tool.uv.workspace]
members = [
    "embeddings",
    "prompts",
    "indexer",
    "qdrant_manager",
    "mcp_server",
    "gateway",
]

[tool.uv.sources]
gateway = { workspace = true }
embeddings = { workspace = true }
prompts = { workspace = true }
indexer = { workspace = true }
qdrant-manager = { workspace = true }
mcp-server = { workspace = true }
