[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "llacroix", email = "lohan.lacroix@itk.fr" }
]
requires-python = ">=3.13.0"
dependencies = [
    "numpy>=2.4.3",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
