[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "llacroix", email = "lohan.lacroix@itk.fr" }
]
requires-python = ">=3.13.0"
dependencies = [
    "fastapi>=0.135.2",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
