[project]
name = "qdrant-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "llacroix", email = "lohan.lacroix@itk.fr" }
]
requires-python = ">=3.13.0"
dependencies = [
    "qdrant-client>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
